Added a trivial unit test
I was struggling to design unit tests for JavaScript, so I created
trivial ones, just so I could show I know what testing code is, even if
I did it poorly. One test should fail.

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <!-- Each tab has its own controller that visualizes the data in different ways -->
-    <script src="controllers/maps.controller.js"></script>
-    <script src="controllers/stats.controller.js"></script>
-    <script src="controllers/dataset.controller.js"></script>
-    <script src="controllers/graphs.controller.js"></script>
+    <script src="js/maps.controller.js"></script>
+    <script src="js/stats.controller.js"></script>
+    <script src="js/dataset.controller.js"></script>
+    <script src="js/graphs.controller.js"></script>
 </body>
 </html>
